--- a/salt/galera/config/cluster.cnf
+++ b/salt/galera/config/cluster.cnf
@@ -1,12 +1,23 @@
 {% set ipaddresses = salt['pillar.get']('mdb_cluster:nodes', {}).values() %} 
 {% set ipaddresses = ",".join(ipaddresses) %} 
 [mysqld]
-query_cache_size=0
+
+innodb_buffer_pool_size=200M
+innodb_log_file_size=100M
+innodb_flush_log_at_trx_commit=0
+max_connections=1024
+innodb_file_per_table
+server_id=3
+
+performance_schema=0
+
 binlog_format=ROW
 default-storage-engine=innodb
 innodb_autoinc_lock_mode=2
 query_cache_type=0
+query_cache_size=0
 bind-address=0.0.0.0
+
 
 # Galera Provider Configuration 
 
@@ -22,6 +33,7 @@ wsrep_cluster_name="{{ pillar['mdb_cluster']['name'] }}"
 wsrep_cluster_address="gcomm://{{ ipaddresses }}"
 
 # Galera Synchronization Configuration 
+#Chat sst method to xtrabackup.
 wsrep_sst_method=rsync
 #wsrep_sst_auth=user:pass
 
