--- a/salt/galera/config/cluster.cnf
+++ b/salt/galera/config/cluster.cnf
@@ -1,17 +1,19 @@
-{% set ips = [] %} 
-{% set hosts = salt['mine.get']('roles:db', 'network.ip_addrs', 'grain') %} 
-{% hosts.update(salt['mine.get']('roles:db_bootstrap', 'network.ip_addrs', 'grain') %}
-{% for id, ip in hosts.iteritems() %} 
-  {% ips.append(ip) %}
-{% endfor %}
-{% set ips = ",".join(ips) %} 
+{% set ipaddress = [] %} 
+{% set hosts = salt['mine.get']('roles:db', 'network.ip_addrs', 'grain') %}
+{%- for id, ips in hosts.iteritems() %} 
+  {% do ipaddress.append(ips[0]) %} 
+{% endfor %} 
 
-#{% set ipaddresses = salt['pillar.get']('mdb_cluster:nodes', {}).values() %} 
-#{% set ipaddresses = ",".join(ipaddresses) %} 
+{% set hosts = salt['mine.get']('roles:db_bootstrap', 'network.ip_addrs', 'grain') %}
+{%- for id, ips in hosts.iteritems() %} 
+  {% do ipaddress.append(ips[0]) %}
+{% endfor %}
+
+{% set ipaddress = ",".join(ipaddress) %}
 [mysqld]
 
-innodb_buffer_pool_size=200M
-innodb_log_file_size=100M
+#innodb_buffer_pool_size=200M
+#innodb_log_file_size=100M
 innodb_flush_log_at_trx_commit=0
 max_connections=1024
 innodb_file_per_table
@@ -38,10 +40,10 @@ wsrep_provider=/usr/lib/galera/libgalera_smm.so
 
 #Galera Cluster Configuration
 wsrep_cluster_name="{{ pillar['mdb_cluster']['name'] }}"
-wsrep_cluster_address="gcomm://{{ ips }}"
+wsrep_cluster_address="gcomm://{{ ipaddress }}"
 
 # Galera Synchronization Configuration 
-#Chat sst method to xtrabackup.
+#Change sst method to xtrabackup.
 wsrep_sst_method=rsync
 #wsrep_sst_auth=user:pass
 
